[gd_scene load_steps=3 format=3 uid="uid://bn5meckmqlgjn"]

[ext_resource type="Script" uid="uid://bkrwccotutga" path="res://Scenes/pause.gd" id="1_l2mpd"]
[ext_resource type="FontFile" uid="uid://cnqm0u4n815fc" path="res://Fonts/PixelOperator.ttf" id="1_o80xk"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l2mpd")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -67.5
offset_right = 183.5
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
text = "Sound"
horizontal_alignment = 1

[node name="Sound" type="HSlider" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
text = "Music"
horizontal_alignment = 1

[node name="Music" type="HSlider" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="FullScreen" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
text = "Full Screen"

[node name="Quit" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
text = "Quit"

[connection signal="value_changed" from="NinePatchRect/VBoxContainer/Sound" to="." method="_on_sound_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/FullScreen" to="." method="_on_full_screen_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
